k8s/ingress/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: flight-booking-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/rewrite-target: /$2

# spec:
#   ingressClassName: nginx

#   rules:
#     - host: flightbooking.local
#       http:
#         paths:

#           - path: /auth(/|$)(.*)
#             pathType: ImplementationSpecific
#             backend:
#               service:
#                 name: auth-service
#                 port:
#                   number: 8081

#           - path: /booking(/|$)(.*)
#             pathType: ImplementationSpecific
#             backend:
#               service:
#                 name: booking-service
#                 port:
#                   number: 8082

#           - path: /inventory(/|$)(.*)
#             pathType: ImplementationSpecific
#             backend:
#               service:
#                 name: inventory-service
#                 port:
#                   number: 8083

#           - path: /payment(/|$)(.*)
#             pathType: ImplementationSpecific
#             backend:
#               service:
#                 name: payment-service
#                 port:
#                   number: 8084

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flight-booking-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: flightbooking.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
